[package]
name = "osm-pbf"
version = "0.1.0"
authors = [ "Sameer Puri <cargo@purisa.me>" ]
edition = "2021"
description = "Parse and write the OSM PBF Format"
homepage = "https://github.com/sameer/osm-pbf"
repository = "https://github.com/sameer/osm-pbf"
license = "MIT OR Apache-2.0"
keywords = ["osm", "pbf", "protobuf", "map", "geojson"]
categories = ["parser-implementations", "science::geo"]
build = "build.rs"

[features]
default = ["zlib"]
zlib = ["async-compression/zlib"]
zstd = ["async-compression/zstd"]
lzma = ["async-compression/lzma"]
bzip2 = ["async-compression/bzip2"]

[dependencies]
async-compression = { version = "0.3", features = ["tokio"] }
async-stream = "0.3"
futures = "0.3"
protobuf = "3.2"
thiserror = "1"
tokio = { version = "1", features = ["io-util"] }

[build-dependencies]
protobuf-codegen = "3.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

