[package]
name = "osm-pbf"
version = "0.2.0"
authors = [ "Sameer Puri <cargo@purisa.me>" ]
edition = "2021"
description = "Parse and write the OSM PBF Format"
homepage = "https://github.com/sameer/osm-pbf"
repository = "https://github.com/sameer/osm-pbf"
license = "MIT OR Apache-2.0"
keywords = ["osm", "pbf", "protobuf", "map", "geojson"]
categories = ["parser-implementations", "science::geo"]
build = "build.rs"

[features]
default = ["zlib"]
zlib = ["async-compression/zlib"]
zstd = ["async-compression/zstd"]
lzma = ["async-compression/lzma"]

[dependencies]
async-compression = { version = "0.3", features = ["tokio"] }
async-stream = "0.3"
futures = "0.3"
quick-protobuf = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["io-util"] }

[build-dependencies]
pb-rs = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

